--- a/hi9-login.html
+++ b/hi9-login.html
@@ -10,13 +10,11 @@
   <template>
     <firebase-auth id="firebaseLogin" user="{{user}}" status-known="{{statusKnown}}" location="https://hi9site.firebaseio.com" provider="google" on-error="errorHandler" on-user-created="userSuccessHandler" on-password-changed="userSuccessHandler" on-password-reset="userSuccessHandler" params="{{params}}" on-user-removed="userSuccessHandler"></firebase-auth>
     <mediator-data location="https://hi9site.firebaseio.com/users/" data="{{userData}}" folder="{{uid}}"></mediator-data>
-    
     <paper-button raised on-tap="logout" hidden$="{{computeLogoutHidden(statusKnown, user)}}"> Logout </paper-button>
     <paper-button raised on-tap="login" hidden$="{{computeLoginHidden(statusKnown, user)}}"> {{loginText}} </paper-button>
   </template>
 </dom-module>
 <script>
-
 (function () {
   'use strict'
   Polymer({
@@ -99,7 +97,7 @@
       this.$.firebaseLogin.login(params)
       this.log('Login')
       if (window.location.hash !== "#!") {
-        window.addEventListener("focus", function(event) {if (window.location.hash === "") {window.location.href = "/#!";location.reload()}}, false)
+        window.addEventListener("focus", function(event) {if (window.location.hash === "") {window.location.href = "/#!"}}, false)
       } else {
         window.location.hash = ""
       }
