--- a/hi9-login.html
+++ b/hi9-login.html
@@ -8,7 +8,7 @@
 -->
 <dom-module id="hi9-login">
   <template>
-    <firebase-auth redirect id="firebaseLogin" user="{{user}}" status-known="{{statusKnown}}" location="https://hi9site.firebaseio.com" provider="google" on-error="errorHandler" on-user-created="userSuccessHandler" on-password-changed="userSuccessHandler" on-password-reset="userSuccessHandler" params="{{params}}" on-user-removed="userSuccessHandler"></firebase-auth>
+    <firebase-auth id="firebaseLogin" user="{{user}}" status-known="{{statusKnown}}" location="https://hi9site.firebaseio.com" provider="google" on-error="errorHandler" on-user-created="userSuccessHandler" on-password-changed="userSuccessHandler" on-password-reset="userSuccessHandler" params="{{params}}" on-user-removed="userSuccessHandler"></firebase-auth>
     <mediator-data location="https://hi9site.firebaseio.com/users/" data="{{userData}}" folder="{{uid}}"></mediator-data>
     <paper-button raised on-tap="logout" hidden$="{{computeLogoutHidden(statusKnown, user)}}"> Logout </paper-button>
     <paper-button raised on-tap="login" hidden$="{{computeLoginHidden(statusKnown, user)}}"> {{loginText}} </paper-button>
@@ -96,6 +96,7 @@
 
       this.$.firebaseLogin.login(params)
       this.log('Login')
+      
     },
     logout: function () {
       this.log('Logout')
