--- a/hi9-login.html
+++ b/hi9-login.html
@@ -22,6 +22,9 @@
         type: Object,
         value: {scope: 'email'}
       },
+      location: {
+        type: String, value:"https://hi9site.firebaseio.com"
+      },
       loginText :{
         value:"Login"
       },
