--- a/hi9-login.html
+++ b/hi9-login.html
@@ -7,7 +7,7 @@
 -->
 <dom-module id="hi9-login">
   <template>
-    <firebase-auth id="firebaseLogin" user="{{user}}" status-known="{{statusKnown}}" location="{{location}}" provider="google" on-error="errorHandler" on-user-created="userSuccessHandler" on-password-changed="userSuccessHandler" on-password-reset="userSuccessHandler" params="{{params}}" on-user-removed="userSuccessHandler"></firebase-auth>
+    <firebase-auth id="firebaseLogin" user="{{user}}" status-known="{{statusKnown}}" location="{{location}}" provider="{{provider}}" on-error="errorHandler" on-user-created="userSuccessHandler" on-password-changed="userSuccessHandler" on-password-reset="userSuccessHandler" params="{{params}}" on-user-removed="userSuccessHandler"></firebase-auth>
     <paper-button raised on-tap="logout" hidden$="{{computeLogoutHidden(statusKnown, user)}}"> Logout </paper-button>
     <paper-button raised on-tap="login" hidden$="{{computeLoginHidden(statusKnown, user)}}"> {{loginText}} </paper-button>
   </template>
@@ -25,11 +25,11 @@
       location: {
         type: String, value:"https://hi9site.firebaseio.com"
       },
+      provider: {
+        type: String, value:"google"
+      },
       loginText :{
         value:"Login"
-      },
-      provider: {
-        type: String, value: 'anonymous'
       },
       message: {
         type: String, value: ''
