--- a/hi9-login.html
+++ b/hi9-login.html
@@ -6,6 +6,13 @@
 @demo https://hi9.uk/
 -->
 <dom-module id="hi9-login">
+   <style>
+    paper-button {
+      background: orange;
+      color:white;
+      font-weight: 300px;
+    }
+  </style>
   <template>
     <firebase-auth id="firebaseLogin" user="{{user}}" status-known="{{statusKnown}}" location="{{location}}" provider="{{provider}}" on-error="errorHandler" on-user-created="userSuccessHandler" on-password-changed="userSuccessHandler" on-password-reset="userSuccessHandler" params="{{params}}" on-user-removed="userSuccessHandler"></firebase-auth>
     <paper-button raised on-tap="logout" hidden$="{{computeLogoutHidden(statusKnown, user)}}"> Logout </paper-button>
