Changed colors to themes

--- a/hi9-login.html
+++ b/hi9-login.html
@@ -8,8 +8,8 @@
 <dom-module id="hi9-login">
    <style>
     paper-button {
-      background: orange;
-      color:white;
+      background: var(--accent-color);
+      color: var(--button-color);
       font-weight: 300px;
     }
   </style>
