--- a/hi9-login.html
+++ b/hi9-login.html
@@ -14,7 +14,7 @@
     }
   </style>
   <template>
-    <firebase-app auth-domain="{{location}}" database-url="{{location}}" api-key="{{apiKey}}"></firebase-app>
+    <firebase-app auth-domain="{{locationDomain}}" database-url="{{location}}" api-key="{{apiKey}}"></firebase-app>
     <firebase-auth id="firebaseLogin"  user="{{user}}"  status-known="{{statusKnown}}" location="{{location}}" provider="{{provider}}" on-error="errorHandler" on-user-created="userSuccessHandler" on-password-changed="userSuccessHandler" on-password-reset="userSuccessHandler" params="{{params}}" on-user-removed="userSuccessHandler"></firebase-auth>
     <paper-button raised on-tap="logout" hidden$="{{computeLogoutHidden(statusKnown, user)}}"> Logout </paper-button>
     <paper-button raised on-tap="login" hidden$="{{computeLoginHidden(statusKnown, user)}}"> {{loginText}} </paper-button>
@@ -28,6 +28,7 @@
     properties: {
       params: {type: Object,value: {scope: 'email'}},
       location: {type: String, value:"https://hi9site.firebaseio.com"},
+      locationDomain: {computed: "getLocationDomain(location)"}
       provider: {type: String, value:"google"},
       loginText :{value:"Login"},
       message: {type: String, value: ''},
@@ -40,6 +41,9 @@
         type: Boolean, notify: true,
         computed: 'computeLogoutHidden(statusKnown, user)'
       }
+    },
+    getLocationDomain: function (location) {
+      return location.replace("https://","")
     },
     returnVal: function (val) {
       if (val !== undefined && val !== null) {
