--- a/hi9-login.html
+++ b/hi9-login.html
@@ -28,7 +28,7 @@
     properties: {
       params: {type: Object,value: {scope: 'email'}},
       location: {type: String, value:"https://hi9site.firebaseio.com"},
-      locationDomain: {computed: "getLocationDomain(location)"}
+      locationDomain: {computed: "getLocationDomain(location)"},
       provider: {type: String, value:"google"},
       loginText :{value:"Login"},
       message: {type: String, value: ''},
