--- a/hi9-login.html
+++ b/hi9-login.html
@@ -15,9 +15,9 @@
   </style>
   <template>
     <firebase-app auth-domain="{{locationDomain}}" database-url="{{location}}" api-key="{{apiKey}}"></firebase-app>
-    <firebase-auth id="firebaseLogin"  user="{{user}}"  status-known="{{statusKnown}}" location="{{location}}" provider="{{provider}}" on-error="errorHandler" on-user-created="userSuccessHandler" on-password-changed="userSuccessHandler" on-password-reset="userSuccessHandler" params="{{params}}" on-user-removed="userSuccessHandler"></firebase-auth>
-    <paper-button raised on-tap="logout" hidden$="{{computeLogoutHidden(statusKnown, user)}}"> Logout </paper-button>
-    <paper-button raised on-tap="login" hidden$="{{computeLoginHidden(statusKnown, user)}}"> {{loginText}} </paper-button>
+    <firebase-auth id="firebaseLogin" signed-in="{{signedIn}}" user="{{user}}" status-known="{{statusKnown}}" location="{{location}}" provider="{{provider}}" on-error="errorHandler" on-user-created="userSuccessHandler" on-password-changed="userSuccessHandler" on-password-reset="userSuccessHandler" params="{{params}}" on-user-removed="userSuccessHandler"></firebase-auth>
+    <paper-button raised on-tap="logout" hidden$="{{signedIn}}"> Logout </paper-button>
+    <paper-button raised on-tap="login" hidden$="{{!signedIn}}"> {{loginText}} </paper-button>
   </template>
 </dom-module>
 <script>
@@ -88,24 +88,6 @@
     },
     computeRemoveUserDisabled: function (email, password) {
       return !email || !password
-    },
-    computeLoginHidden: function (statusKnown, user) {
-      return !statusKnown || !!user
-    },
-    computeLogoutHidden: function (statusKnown, user) {
-      return !statusKnown || !user
-    },
-    computeLoginStatus: function (statusKnown, user) {
-      var d = new Date()
-      var n = d.getTime()
-
-      if (statusKnown && user) {
-        return 'Logged in'
-      }
-      if (statusKnown) {
-        return 'Logged out'
-      }
-      return 'Unknown (checking status...)'
     },
     isAdmin: function (role) {
       return role === 'admin'
