--- a/hi9-login.html
+++ b/hi9-login.html
@@ -15,7 +15,7 @@
     }
   </style>
   <template>
-    <firebase-app auth-domain="{{locationDomain}}" database-url="{{location}}" api-key="{{apiKey}}"></firebase-app>
+    <firebase-app name="{{locationDomain}}" auth-domain="{{locationDomain}}" database-url="{{location}}" api-key="{{apiKey}}"></firebase-app>
     <firebase-auth id="firebaseLogin" signed-in="{{signedIn}}" user="{{user}}" status-known="{{statusKnown}}" location="{{location}}" provider="{{provider}}" on-error="errorHandler" on-user-created="userSuccessHandler" on-password-changed="userSuccessHandler" on-password-reset="userSuccessHandler" params="{{params}}" on-user-removed="userSuccessHandler"></firebase-auth>
     <paper-button raised on-tap="logout" hidden$="{{signedIn}}"> Logout </paper-button>
     <paper-button raised on-tap="login" hidden$="{{!signedIn}}"> {{loginText}} </paper-button>
@@ -28,7 +28,6 @@
     is: 'hi9-login',
     properties: {
       params: {type: Object,value: {scope: 'email'}},
-      location: {type: String, value:"https://hi9site.firebaseio.com"},
       locationDomain: {computed: "getLocationDomain(location)"},
       provider: {type: String, value:"google"},
       loginText :{value:"Login"},
