--- a/hi9-login.html
+++ b/hi9-login.html
@@ -15,8 +15,7 @@
     }
   </style>
   <template>
-    <firebase-app name="{{locationDomain}}" auth-domain="{{locationDomain}}" database-url="{{location}}" api-key="{{apiKey}}"></firebase-app>
-    <firebase-auth id="firebaseLogin" signed-in="{{signedIn}}" user="{{user}}" status-known="{{statusKnown}}" location="{{location}}" provider="{{provider}}" on-error="errorHandler" on-user-created="userSuccessHandler" on-password-changed="userSuccessHandler" on-password-reset="userSuccessHandler" params="{{params}}" on-user-removed="userSuccessHandler"></firebase-auth>
+    <firebase-auth id="firebaseLogin" signed-in="{{signedIn}}" user="{{_user}}" status-known="{{statusKnown}}" location="{{location}}" provider="{{provider}}" on-error="errorHandler" on-user-created="userSuccessHandler" on-password-changed="userSuccessHandler" on-password-reset="userSuccessHandler" params="{{params}}" on-user-removed="userSuccessHandler"></firebase-auth>
     <paper-button raised on-tap="logout" hidden$="{{signedIn}}"> Logout </paper-button>
     <paper-button raised on-tap="login" hidden$="{{!signedIn}}"> {{loginText}} </paper-button>
   </template>
@@ -28,15 +27,22 @@
     is: 'hi9-login',
     properties: {
       params: {type: Object,value: {scope: 'email'}},
-      locationDomain: {computed: "getLocationDomain(location)"},
       provider: {type: String, value:"google"},
       loginText :{value:"Login"},
       message: {type: String, value: ''},
       email: {type: String, value: ''},
       password: {type: String, value: ''},
-      user: {type: Object, value: null,notify: true},
+      user: {type: Object, value: null, computed: "getUser(_user, signedIn)", notify: true},
       uid: {computed: 'returnVal(user.uid)',notify: true},
+      signedIn: {type: Boolean, value: false},
       statusKnown: {type: Boolean}
+    },
+    getUser: function(_user, signedIn) {
+      if (signedIn) {
+        return _user
+      } else {
+        return null
+      }
     },
     getLocationDomain: function (location) {
       return location.replace("https://","")
