--- a/hi9-login.html
+++ b/hi9-login.html
@@ -16,8 +16,8 @@
   </style>
   <template>
     <firebase-auth id="firebaseLogin" signed-in="{{signedIn}}" user="{{_user}}" status-known="{{statusKnown}}" location="{{location}}" provider="{{provider}}" on-error="errorHandler" on-user-created="userSuccessHandler" on-password-changed="userSuccessHandler" on-password-reset="userSuccessHandler" params="{{params}}" on-user-removed="userSuccessHandler"></firebase-auth>
-    <paper-button raised on-tap="logout" hidden$="{{signedIn}}"> Logout </paper-button>
-    <paper-button raised on-tap="login" hidden$="{{!signedIn}}"> {{loginText}} </paper-button>
+    <paper-button raised on-tap="logout" hidden$="{{!signedIn}}"> Logout </paper-button>
+    <paper-button raised on-tap="login" hidden$="{{signedIn}}"> {{loginText}} </paper-button>
   </template>
 </dom-module>
 <script>
