--- a/hi9-login.html
+++ b/hi9-login.html
@@ -1,6 +1,5 @@
 <link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../polymerfire/firebase-auth.html">
-<link rel="import" href="../polymerfire/firebase-app.html">
+<link rel="import" href="../google-signin/google-signin-aware.html">
 <link rel="import" href="../paper-button/paper-button.html">
 <!--
 [![js-standard-style](https://img.shields.io/badge/code%20style-standard-brightgreen.svg?style=flat)](http://standardjs.com/)
@@ -15,8 +14,19 @@
     }
   </style>
   <template>
-    <firebase-app name="{{locationDomain}}" auth-domain="{{locationDomain}}" database-url="{{_url}}" api-key="{{apiKey}}"></firebase-app>
-    <firebase-auth id="firebaseLogin" signed-in="{{signedIn}}" user="{{_user}}" status-known="{{statusKnown}}" location="{{location}}" provider="{{provider}}" on-error="errorHandler" on-user-created="userSuccessHandler" on-password-changed="userSuccessHandler" on-password-reset="userSuccessHandler" params="{{params}}" on-user-removed="userSuccessHandler"></firebase-auth>
+    <google-signin-aware id="aware"
+      client-id="{{clientId}}"
+      scopes="profile"
+      openid-prompt="{{openidPromptValue}}"
+      signed-in="{{signedIn}}"
+      offline="{{offline}}"
+      is-authorized="{{isAuthorized}}"
+      need-additional-auth="{{needAdditionalAuth}}"
+      on-google-signin-aware-success="handleSignIn"
+      on-google-signin-offline-success="handleOffline"
+      on-google-signin-aware-signed-out="handleSignOut">
+    </google-signin-aware>
+        
     <paper-button raised on-tap="logout" hidden$="{{!signedIn}}"> Logout </paper-button>
     <paper-button raised on-tap="login" hidden$="{{signedIn}}"> {{loginText}} </paper-button>
   </template>
@@ -60,10 +70,10 @@
       }
     },
     login: function () {
-      this.$.firebaseLogin.signInWithRedirect(this.provider)
+      this.$.aware.signOut()
     },
     logout: function () {
-      this.$.firebaseLogin.signOut()
+      this.$.aware.signIn()
       window.location.href = "/"
     },
     errorHandler: function (e) {
