--- a/hi9-login.html
+++ b/hi9-login.html
@@ -78,7 +78,7 @@
     },
     handleSignIn: function (e) {
       console.log(e)
-      var profile = gapi.auth2.getAuthInstance().currentUser.get().getBasicProfile())
+      var profile = gapi.auth2.getAuthInstance().currentUser.get().getBasicProfile()
       this._user = {
         email: profile.getEmail(), 
         familyName: profile.getFamilyName(), 
