--- a/hi9-login.html
+++ b/hi9-login.html
@@ -84,6 +84,7 @@
         familyName: profile.getFamilyName(), 
         givenName: profile.getGivenName(), 
         id: profile.getId(), 
+        uid: "google:" + profile.getId(), 
         imageUrl: profile.getImageUrl(), 
         getName: profile.getName()
         token: e.detail.access_token
