--- a/hi9-login.html
+++ b/hi9-login.html
@@ -83,10 +83,9 @@
         email: profile.getEmail(), 
         familyName: profile.getFamilyName(), 
         givenName: profile.getGivenName(), 
-        id: profile.getId(), 
         uid: "google:" + profile.getId(), 
         imageUrl: profile.getImageUrl(), 
-        getName: profile.getName()
+        getName: profile.getName(),
         token: e.detail.access_token
       }
     },
