--- a/hi9-login.html
+++ b/hi9-login.html
@@ -83,7 +83,7 @@
         email: profile.getEmail(), 
         familyName: profile.getFamilyName(), 
         givenName: profile.getGivenName(), 
-        displayName: profile.getGivenName() + " " + profile.getGivenName(),
+        displayName: profile.getGivenName() + " " + profile.getFamilyName(),
         uid: "google:" + profile.getId(), 
         imageUrl: profile.getImageUrl(), 
         getName: profile.getName(),
